@@ -1,3 +1,11 @@
+2010-05-25  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSPropertyList.m: ([-parser;foundChartacters:]) don't trim
+	the supplied string ... we need to retain whitespace around entities
+	in value test.
+	* Source/NSXMLParser.m: Add support for ignorable whitespace so that
+	it doesn't get handed to the delegate as normal characters.
+
 2010-05-22  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Headers/Foundation/NSObjCRuntime.h:
